MDL-34300 JavaScript: Stop YUI from forcing z-index on moodle-core-notification

--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -864,7 +864,7 @@ sup {vertical-align: super;}
     background: none;
     border: none;
     /* Override the z-index set incorrectly by the YUI dialogue */
-    z-index: 600!important;
+    z-index: 600;
 }
 
 
